# ids_spatial_evolution_juno

./: .envrc  .gitattributes  .gitignore  .nojekyll  Data.toml  Manifest.toml  Project.toml  README.md  _quarto-extra.yml  _quarto-man.yml  _quarto.yml  article.html  article.qmd  environment.yml  index.aux  index.bbl  index.blg  index.html  index.qmd  justfile  note.qmd  notes-preview.html  notes.html  notes.ipynb  notes.out.ipynb  notes.qmd  pixi.toml  pyproject.toml  research.bib  search.json
_manuscript/: index.html  notes-preview.html  notes.ipynb  notes.out.ipynb  research.bib
_manuscript/_tex/: article.tex
_manuscript/notebooks/: 20_model.ipynb
_tex/: index.tex
_tex/files/: bibexport.bib
conf/base/: catalog_juno.yml  logging.yml
data/: info.yml  updated_events_JNO_method=fit_tau=0:01:00_ts=0:00:01.arrow  updated_events_JNO_tr=20110825-20160630_method=fit_tau=0:01:00_ts=0:00:01.arrow  updated_events_Wind_tr=20110825-20160630_method=fit_tau=0:01:00_ts=0:00:00.090909.arrow
figures/examples/: juno_id_example.csv  stereo_id_example_BFIELD_0-BFIELD_1-BFIELD_2_joined_rot_tot.csv  stereo_id_example_proton_bulk_speed.csv  wind_id_example_BRTN_rot_tot.csv  wind_id_example_U_eGSE_tot.csv
files/: bibexport.bib  kedro.just  omni.vap  overleaf.just
files/bibliography/: full_anton.bib
notebooks/: 00_orbit_overview-preview.html  00_orbit_overview.ipynb  00_orbit_overview.out.ipynb  00_overview.html  00_overview.ipynb  00_overview.qmd  00_sw_overview.ipynb  01_ids_example-preview.html  01_ids_example.html  01_ids_example.ipynb  01_ids_example.out.ipynb  01_results_julia-preview.html  01_results_julia.html  01_results_julia.out.ipynb  01_results_julia.qmd  02_occurence_rate.html  02_occurence_rate.ipynb  02_waiting_time.html  02_waiting_time.ipynb  02_waiting_time.qmd  03_orientation.html  03_orientation.ipynb  03_profiles.html  03_profiles.ipynb  03_properties_new.ipynb  04_association.html  04_association.ipynb  04_calc.html  04_properties-preview.html  04_properties.html  04_properties.ipynb  04_properties.out.ipynb  05_sea-preview.html  05_sea.html  05_sea.out.ipynb  06_corr_julia-preview.html  06_corr_julia.html  06_corr_julia.out.ipynb  100_results_Alfvenicity.html  100_results_Alfvenicity.ipynb  (+50 more)
notebooks/_missions/: wind.ipynb
notebooks/_pipelines/: 100_project.ipynb  10_mission.ipynb  1_data.ipynb  2_data_mag.ipynb
notebooks/analysis/: 00_base-preview.html  00_base.html  00_base.ipynb  00_base.out.ipynb  01_occurence_rate-preview.html  01_occurence_rate.html  01_occurence_rate.ipynb  01_occurence_rate.out.ipynb  02_orientation-preview.html  02_orientation.html  02_orientation.ipynb  02_orientation.out.ipynb  03_map-preview.html  (+18 more)
presentations/: .rMeeting.qmd  AGU23_poster-preview.html  AGU23_poster.embed.ipynb  AGU23_poster.html  AGU23_poster.out.ipynb  AGU23_poster.qmd  grpMeeting_Zijin_2024-09-08.html  grpMeeting_Zijin_2024-09.html  grpMeeting_Zijin_2024-09.qmd  rMeeting.qmd
scripts/: data.py  plot.jl
src/: Juno.jl  THEMIS.jl  data.jl  io.jl  main.jl  plot.jl  scattering.jl  trans.jl
(+66 files in other folders)
