[project]
name = "juno"
version = "0.1.0"
description = "Utilities for working with Juno data"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "speasy",
    "sunpy",
    "discontinuitypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
ipykernel = "*"
intake = "*"
numba = "*"
polars = "*"
xarray = "*"
pydantic = "*"
scipy = "*"
netcdf4 = "*"   # for `pyspedas`

[tool.pixi.pypi-dependencies]
juno = { path = ".", editable = true }
scienceplots = "*"
pooch = "*"
beforerr = { path = "../../src/beforerr_dev", editable = true }
discontinuitypy = { path = "../discontinuitypy", editable = true, extras = ["plot"] }
space_analysis = { path = "../../src/space-analysis.py", editable = true }