[project]
name = "juno"
version = "0.2.0"
description = "Utilities for working with Juno data"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "speasy",
    "sunpy",
    "discontinuitypy",
    "polars",
    "pydantic",
    "intake",
    "xarray",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ipykernel", "scienceplots"]
overview = ["sunpy[net, timeseries]"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
netcdf4 = "*"   # for `pyspedas`

[tool.pixi.feature.local.pypi-dependencies]
juno = { path = ".", editable = true }
beforerr = { path = "../../src/beforerr_dev", editable = true }
discontinuitypy = { path = "../discontinuitypy", editable = true, extras = ["plot"] }
space_analysis = { path = "../../src/space-analysis.py", editable = true }

[tool.pixi.environments]
default = ["dev", "overview", "local"]